actualizacion de achivos html

--- a/actividad6/revista/templates/revista/student_form.html
+++ b/actividad6/revista/templates/revista/student_form.html
@@ -1,33 +1,24 @@
 {% extends 'revista/base.html' %}
+{% block title %}{% if object %}Editar estudiante{% else %}Crear estudiante{% endif %}{% endblock %}
 {% block content %}
-<h2 class="mb-3">{% if object %}Editar estudiante{% else %}Nuevo estudiante{% endif %}</h2>
+<h2>{% if object %}Editar estudiante{% else %}Crear estudiante{% endif %}</h2>
+
 <form method="post">
   {% csrf_token %}
-  {{ form.non_field_errors }}
+  <div class="mb-3">
+    {{ form.first_name.label_tag }} {{ form.first_name }} {{ form.first_name.errors }}
+  </div>
+  <div class="mb-3">
+    {{ form.last_name.label_tag }} {{ form.last_name }} {{ form.last_name.errors }}
+  </div>
   <div class="mb-3">
     {{ form.student_id.label_tag }} {{ form.student_id }} {{ form.student_id.errors }}
-  </div>
-  <div class="row">
-    <div class="col-md-6 mb-3">
-      {{ form.first_name.label_tag }} {{ form.first_name }} {{ form.first_name.errors }}
-    </div>
-    <div class="col-md-6 mb-3">
-      {{ form.last_name.label_tag }} {{ form.last_name }} {{ form.last_name.errors }}
-    </div>
   </div>
   <div class="mb-3">
     {{ form.email.label_tag }} {{ form.email }} {{ form.email.errors }}
   </div>
-  <div class="row">
-    <div class="col-md-6 mb-3">
-      {{ form.career.label_tag }} {{ form.career }} {{ form.career.errors }}
-    </div>
-    <div class="col-md-6 mb-3">
-      {{ form.phone.label_tag }} {{ form.phone }} {{ form.phone.errors }}
-    </div>
-  </div>
 
-  <button class="btn btn-success" type="submit">Guardar</button>
-  <a class="btn btn-secondary" href="{% url 'revista:students_list' %}">Cancelar</a>
+  <button class="btn btn-primary" type="submit">Guardar</button>
+  <a class="btn btn-secondary" href="{% url 'revista:publisher_list' %}">Cancelar</a>
 </form>
 {% endblock %}
