--- a/actividad6/revista/templates/revista/publication_form.html
+++ b/actividad6/revista/templates/revista/publication_form.html
@@ -1,44 +1,50 @@
 {% extends 'revista/base.html' %}
+{% block title %}{% if object %}Editar publicación{% else %}Crear publicación{% endif %}{% endblock %}
 {% block content %}
-<h2 class="mb-3">{% if object %}Editar publicación{% else %}Nueva publicación{% endif %}</h2>
+<div class="mb-3">
+  <h2>{% if object %}Editar publicación{% else %}Crear publicación{% endif %}</h2>
+</div>
 
 <form method="post" novalidate>
   {% csrf_token %}
-  {{ form.non_field_errors }}
   <div class="mb-3">
+    {{ form.non_field_errors }}
     {{ form.title.label_tag }} 
     {{ form.title }}
     {{ form.title.errors }}
   </div>
+
   <div class="mb-3">
     {{ form.content.label_tag }}
     {{ form.content }}
     {{ form.content.errors }}
   </div>
-  <div class="row">
-    <div class="col-md-4 mb-3">
+
+  <div class="row mb-3">
+    <div class="col-md-4">
       {{ form.publisher.label_tag }}
       {{ form.publisher }}
       {{ form.publisher.errors }}
     </div>
-    <div class="col-md-4 mb-3">
+    <div class="col-md-4">
       {{ form.authorizer.label_tag }}
       {{ form.authorizer }}
       {{ form.authorizer.errors }}
     </div>
-    <div class="col-md-2 mb-3">
+    <div class="col-md-4">
       {{ form.status.label_tag }}
       {{ form.status }}
       {{ form.status.errors }}
     </div>
-    <div class="col-md-2 mb-3">
-      {{ form.published_at.label_tag }}
-      {{ form.published_at }}
-      {{ form.published_at.errors }}
-    </div>
   </div>
 
-  <button class="btn btn-success" type="submit">Guardar</button>
-  <a class="btn btn-secondary" href="{% url 'revista:publications_list' %}">Cancelar</a>
+  <div class="mb-3">
+    {{ form.published_at.label_tag }}
+    {{ form.published_at }}
+    {{ form.published_at.errors }}
+  </div>
+
+  <button class="btn btn-primary" type="submit">Guardar</button>
+  <a class="btn btn-secondary" href="{% url 'revista:publication_list' %}">Cancelar</a>
 </form>
 {% endblock %}
