--- a/actividad6/revista/templates/revista/publishers_list.html
+++ b/actividad6/revista/templates/revista/publishers_list.html
@@ -1,35 +1,26 @@
 {% extends 'revista/base.html' %}
-{% block title %}Listado de Publicadores{% endblock %}
 {% block content %}
-<div class="d-flex justify-content-between align-items-center mb-3">
-  <h1>Publicadores</h1>
-
-  <a class="btn btn-primary" href="#">Crear publicador</a>
-</div>
-
-<table class="table table-striped table-bordered">
-  <thead class="table-light">
-    <tr>
-      <th>Nombre</th>
-      <th>Carnet</th>
-      <th>Email</th>
-      <th style="width:140px;">Acciones</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for publisher in publishers %}
-    <tr>
-      <td>{{ publisher.first_name }} {{ publisher.last_name }}</td>
-      <td>{{ publisher.student_id }}</td>
-      <td>{{ publisher.email }}</td>
-      <td>
-        <a class="btn btn-sm btn-info me-1" href="{% url 'revista:publisher_detail' publisher.pk %}">VER</a>
-        <a class="btn btn-sm btn-warning" href="{% url 'revista:publisher_edit' publisher.pk %}">EDITAR</a>
-      </td>
-    </tr>
-    {% empty %}
-    <tr><td colspan="4" class="text-center">No hay publicadores.</td></tr>
-    {% endfor %}
-  </tbody>
+<h2>Listado de publicadores</h2>
+<a class="btn" href="{% url 'publisher_create' %}">Agregar publicador</a>
+<table>
+  <tr>
+    <th>Nombre</th>
+    <th>Apellido</th>
+    <th>Email</th>
+    <th>Acciones</th>
+  </tr>
+  {% for p in publishers %}
+  <tr>
+    <td>{{ p.first_name }}</td>
+    <td>{{ p.last_name }}</td>
+    <td>{{ p.email }}</td>
+    <td>
+      <a class="btn" href="{% url 'publisher_detail' p.id %}">Ver</a>
+      <a class="btn" href="{% url 'publisher_edit' p.id %}">Editar</a>
+    </td>
+  </tr>
+  {% empty %}
+  <tr><td colspan="4">No hay publicadores registrados.</td></tr>
+  {% endfor %}
 </table>
 {% endblock %}
